[workspace]
resolver = "3"
members = [
  "packages/moqt-cli",
  "packages/moqt-native",
  "packages/moqt-relay",
  "packages/moqt-transport",
  "packages/moqt-wasm",
]

[workspace.package]
authors = ["Kousuke Takaki <kousuke.takaki@shodohq.com>"]
description = "Media over QUIC Transport"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shodohq/moqt.git"
version = "0.1.0"

[workspace.dependencies]
bytes = "1.8"
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-util", "rt", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures-core = "0.3"
